; ModuleID = '/home/carl/AnghaBench/streem/src/extr_exec.c_exec_call.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_exec.c_exec_call.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STRM_NG = common dso_local global i32 0, align 4
@STRM_OK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"function not found\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32, i32, i32*, i32*)* @exec_call to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @exec_call(i32* %0, i32* %1, i32 %2, i32 %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  %17 = load i32, i32* @STRM_NG, align 4
  store i32 %17, i32* %14, align 4
  %18 = load i32, i32* %11, align 4
  %19 = icmp sgt i32 %18, 0
  br i1 %19, label %20, label %66

20:                                               ; preds = %6
  %21 = load i32*, i32** %12, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32* @strm_value_ns(i32 %23)
  store i32* %24, i32** %16, align 8
  %25 = load i32*, i32** %16, align 8
  %26 = icmp ne i32* %25, null
  br i1 %26, label %27, label %65

27:                                               ; preds = %20
  %28 = load i32*, i32** %16, align 8
  %29 = load i32, i32* %10, align 4
  %30 = call i32 @strm_var_get(i32* %28, i32 %29, i32* %15)
  store i32 %30, i32* %14, align 4
  %31 = load i32, i32* %14, align 4
  %32 = load i32, i32* @STRM_NG, align 4
  %33 = icmp eq i32 %31, %32
  br i1 %33, label %34, label %64

34:                                               ; preds = %27
  %35 = load i32, i32* %11, align 4
  %36 = icmp sgt i32 %35, 0
  br i1 %36, label %37, label %63

37:                                               ; preds = %34
  %38 = load i32*, i32** %12, align 8
  %39 = getelementptr inbounds i32, i32* %38, i64 0
  %40 = load i32, i32* %39, align 4
  %41 = call i64 @strm_array_p(i32 %40)
  %42 = icmp ne i64 %41, 0
  br i1 %42, label %43, label %63

43:                                               ; preds = %37
  %44 = load i32, i32* %10, align 4
  %45 = call i32 @strm_str_value(i32 %44)
  store i32 %45, i32* %15, align 4
  %46 = load i32*, i32** %8, align 8
  %47 = load i32*, i32** %12, align 8
  %48 = getelementptr inbounds i32, i32* %47, i64 0
  %49 = load i32, i32* %48, align 4
  %50 = load i32*, i32** %13, align 8
  %51 = call i32 @ary_get(i32* %46, i32 %49, i32 1, i32* %15, i32* %50)
  store i32 %51, i32* %14, align 4
  %52 = load i32, i32* %14, align 4
  %53 = load i32, i32* @STRM_OK, align 4
  %54 = icmp eq i32 %52, %53
  br i1 %54, label %55, label %60

55:                                               ; preds = %43
  %56 = load i32, i32* %11, align 4
  %57 = icmp eq i32 %56, 1
  br i1 %57, label %58, label %60

58:                                               ; preds = %55
  %59 = load i32, i32* @STRM_OK, align 4
  store i32 %59, i32* %7, align 4
  br label %89

60:                                               ; preds = %55, %43
  %61 = load i32*, i32** %13, align 8
  %62 = load i32, i32* %61, align 4
  store i32 %62, i32* %15, align 4
  br label %63

63:                                               ; preds = %60, %37, %34
  br label %64

64:                                               ; preds = %63, %27
  br label %65

65:                                               ; preds = %64, %20
  br label %66

66:                                               ; preds = %65, %6
  %67 = load i32, i32* %14, align 4
  %68 = load i32, i32* @STRM_NG, align 4
  %69 = icmp eq i32 %67, %68
  br i1 %69, label %70, label %74

70:                                               ; preds = %66
  %71 = load i32*, i32** %9, align 8
  %72 = load i32, i32* %10, align 4
  %73 = call i32 @strm_var_get(i32* %71, i32 %72, i32* %15)
  store i32 %73, i32* %14, align 4
  br label %74

74:                                               ; preds = %70, %66
  %75 = load i32, i32* %14, align 4
  %76 = load i32, i32* @STRM_OK, align 4
  %77 = icmp eq i32 %75, %76
  br i1 %77, label %78, label %85

78:                                               ; preds = %74
  %79 = load i32*, i32** %8, align 8
  %80 = load i32, i32* %15, align 4
  %81 = load i32, i32* %11, align 4
  %82 = load i32*, i32** %12, align 8
  %83 = load i32*, i32** %13, align 8
  %84 = call i32 @strm_funcall(i32* %79, i32 %80, i32 %81, i32* %82, i32* %83)
  store i32 %84, i32* %7, align 4
  br label %89

85:                                               ; preds = %74
  %86 = load i32*, i32** %8, align 8
  %87 = call i32 @strm_raise(i32* %86, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %88 = load i32, i32* @STRM_NG, align 4
  store i32 %88, i32* %7, align 4
  br label %89

89:                                               ; preds = %85, %78, %58
  %90 = load i32, i32* %7, align 4
  ret i32 %90
}

declare dso_local i32* @strm_value_ns(i32) #1

declare dso_local i32 @strm_var_get(i32*, i32, i32*) #1

declare dso_local i64 @strm_array_p(i32) #1

declare dso_local i32 @strm_str_value(i32) #1

declare dso_local i32 @ary_get(i32*, i32, i32, i32*, i32*) #1

declare dso_local i32 @strm_funcall(i32*, i32, i32, i32*, i32*) #1

declare dso_local i32 @strm_raise(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
